base/src/test/resources/failure/syntax/let-expr2.aya.txt
In file $FILE:5:2 ->

  3 | 
  4 | def wrong-type : Unit =>
  5 |   let a := 1 in
        ^------------^ Begin of the error
  6 |   let b := 2 in
  7 |   3
        ^^ End of the error

Error: Cannot check the expression
         let
        | a := 1
        | b := 2
        in 3
       of type
         Nat
       against the type
         Unit

In file $FILE:10:2 ->

   8 | 
   9 | def wrong-type-again : Unit =>
  10 |   let
         ^--^ Begin of the error
  11 |   | a := 1
  12 |   | b := 2
  13 |   in 3
         ^---^ End of the error

Error: Cannot check the expression
         let
        | a := 1
        | b := 2
        in 3
       of type
         Nat
       against the type
         Unit

2 error(s), 0 warning(s).
What are you doing?
